added project filtering by category

--- a/content/projects/ecommerce-platform.mdx
+++ b/content/projects/ecommerce-platform.mdx
@@ -3,6 +3,7 @@ title: "E-Commerce Platform"
 description: "A full-stack e-commerce solution built with Next.js, featuring user authentication, payment processing, and admin dashboard."
 image: "/images/projects/ecommerce-platform.jpg"
 tags: ["Next.js", "TypeScript", "Stripe", "PostgreSQL", "Tailwind CSS"]
+categories: ["dev"]
 github: "https://github.com/yourname/ecommerce-platform"
 live: "https://ecommerce-platform.vercel.app"
 date: "2024-01-15"
