--- a/content/projects/task-management-app.mdx
+++ b/content/projects/task-management-app.mdx
@@ -3,6 +3,7 @@ title: "Task Management App"
 description: "A collaborative task management application with real-time updates, drag-and-drop functionality, and team collaboration features."
 image: "/images/projects/task-management.jpg"
 tags: ["React", "Node.js", "Socket.io", "MongoDB", "Express"]
+categories: ["dev"]
 github: "https://github.com/yourname/task-management"
 live: "https://task-management-app.vercel.app"
 date: "2023-11-20"
