--- a/content/projects/veracity.mdx
+++ b/content/projects/veracity.mdx
@@ -3,6 +3,7 @@ title: "Veracity"
 description: "Interface for charity searching web app. No longer running due to API restrictions."
 image: "/img/veracitypic3.png"
 tags: ["Web App", "Charity Search", "API Integration", "Social Impact", "JavaScript", "HTML", "CSS"]
+categories: ["dev"]
 date: "2020-02-15"
 ---
 
