--- a/content/projects/wooden-toy.mdx
+++ b/content/projects/wooden-toy.mdx
@@ -3,7 +3,7 @@ title: "Wooden Toy"
 description: "Pacman themed wooden toy with laser-cut interactive parts. Designed and modeled with Autodesk Inventor."
 image: "/img/wooden-toy.png"
 tags: ["Fabrication", "Laser Cutting", "Autodesk Inventor", "CAD Design", "Woodworking", "Pacman", "Physical Design"]
-categories: ["fabrication", "design"]
+categories: ["design", "art"]
 date: "2020-04-15"
 ---
 
