added feature projects section to home page

--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -5,6 +5,7 @@ image: "/img/atrophypic1.png"
 tags: ["VR", "WebVR", "Interactive Art", "3D Graphics", "WebGL", "Creative Coding", "Digital Art"]
 categories: ["dev", "art"]
 date: "2024-09-15"
+featured: true
 ---
 
 # Atrophy: Graveyard of My Fallen Heroes
