--- a/content/projects/ml-hacks.mdx
+++ b/content/projects/ml-hacks.mdx
@@ -5,6 +5,7 @@ image: "/img/mlhackspic1.png"
 tags: ["Machine Learning", "Hackathon", "Education", "Women in Tech", "Web Development", "Event Website", "Diversity"]
 categories: ["dev", "design"]
 date: "2024-08-10"
+featured: true
 ---
 
 # ML Hacks
