edited mdx pages, rendering on page layout for individual project listings

--- a/content/projects/2048.mdx
+++ b/content/projects/2048.mdx
@@ -5,6 +5,7 @@ image: "/img/2048pic1.png"
 tags: ["JavaScript", "HTML", "CSS", "Game Development", "Puzzle Game", "Web Games", "Classic Games"]
 categories: ["dev", "design"]
 date: "2020-07-15"
+link: "https://lilianzlettuce.github.io/2048"
 ---
 
 # 2048
