--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -2,10 +2,10 @@
 title: "Atrophy: Graveyard of My Fallen Heroes"
 description: "Interactive VR environment simulating the decay of the self. Accessible online via web."
 image: "/img/atrophypic1.png"
-tags: ["VR", "WebVR", "Interactive Art", "3D Graphics", "WebGL", "Creative Coding", "Digital Art"]
+tags: ["VR", "WebVR", "Interactive Art", "3D Graphics", "Immersive Experience", "Creative Coding", "Digital Art"]
 categories: ["dev", "art"]
-date: "2024-09-15"
-featured: true
+date: "2024-08-15"
+link: "https://lilianzlettuce.github.io/ad417/"
 ---
 
 # Atrophy: Graveyard of My Fallen Heroes
