--- a/content/projects/bloog.mdx
+++ b/content/projects/bloog.mdx
@@ -2,9 +2,10 @@
 title: "BLOOG"
 description: "Notecard web app built with React, Redux, & Firebase. (Basically knockoff quizlet)."
 image: "/img/bloogpic1.png"
-tags: ["React", "Redux", "Firebase", "Education", "Notecards", "Study Tools", "Web App"]
+tags: ["React", "Redux", "Firebase", "Study Tool", "Web App"]
 categories: ["dev", "design"]
-date: "2021-05-20"
+date: "2021-05-15"
+link: "https://bloog-ef82f.web.app/"
 ---
 
 # BLOOG
