--- a/content/projects/chipin.mdx
+++ b/content/projects/chipin.mdx
@@ -5,6 +5,7 @@ image: "/img/chipin1.png"
 tags: ["React", "Firebase", "AI", "Household Management", "Collaborative Tools", "Software Engineering", "Team Project"]
 categories: ["dev", "design"]
 date: "2024-07-20"
+link: "https://github.com/lilianzlettuce/chip-in"
 ---
 
 # ChipIn
