--- a/content/projects/escape-room.mdx
+++ b/content/projects/escape-room.mdx
@@ -4,7 +4,8 @@ description: "Online escape room featuring the nonsensical \"logic\" puzzles of 
 image: "/img/escaperoompic1.png"
 tags: ["JavaScript", "HTML", "CSS", "Puzzle Game", "Escape Room", "Interactive Story", "Web Games"]
 categories: ["dev", "design"]
-date: "2020-06-10"
+date: "2020-12-15"
+link: "https://lilianzlettuce.github.io/escapeRoom"
 ---
 
 # Escape Room
