--- a/content/projects/linescape.mdx
+++ b/content/projects/linescape.mdx
@@ -2,10 +2,11 @@
 title: "LineScape"
 description: "SVG drawing tool designed to simplify the process of creating line animations for websites."
 image: "/img/linescapepic1.png"
-tags: ["SVG", "Animation", "Drawing Tool", "Web Design", "Creative Coding", "JavaScript", "Design Tools"]
+tags: ["SVG", "Animation", "Drawing Tool", "Web Development", "Creative Coding", "Design Tools"]
 categories: ["dev", "design"]
 date: "2021-04-15"
 award: "Best Design @ Superposition V"
+link: "https://lilianzlettuce.github.io/linescape-vh"
 ---
 
 # LineScape
