--- a/content/projects/ml-hacks.mdx
+++ b/content/projects/ml-hacks.mdx
@@ -2,10 +2,10 @@
 title: "ML Hacks"
 description: "Website for ML Hacks, Bay Area's premier Machine Learning focused hackathon for female and nonbinary high school students."
 image: "/img/mlhackspic1.png"
-tags: ["Machine Learning", "Hackathon", "Education", "Women in Tech", "Web Development", "Event Website", "Diversity"]
+tags: ["Machine Learning", "Hackathon", "Education", "Women in Tech", "Web Development", "Event Website"]
 categories: ["dev", "design"]
-date: "2024-08-10"
-featured: true
+date: "2022-03-15"
+link: "https://mlhacks2022.vercel.app/"
 ---
 
 # ML Hacks
