--- a/content/projects/purdue-hackers-landing-page.mdx
+++ b/content/projects/purdue-hackers-landing-page.mdx
@@ -2,9 +2,10 @@
 title: "Purdue Hackers Landing Page"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
 image: "/img/phpic2.png"
-tags: ["Next.js", "React", "Student Organization", "Landing Page", "Community", "Web Development"]
+tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
 categories: ["dev", "design"]
-date: "2024-10-20"
+date: "2024-10-01"
+link: "https://www.purduehackers.com/"
 ---
 
 # Purdue Hackers Landing Page
