--- a/content/projects/scout-landing-page.mdx
+++ b/content/projects/scout-landing-page.mdx
@@ -5,6 +5,7 @@ image: "/img/scout1.png"
 tags: ["Next.js", "TypeScript", "React", "Responsive Design", "UI/UX", "Landing Page", "Startup"]
 categories: ["dev", "design"]
 date: "2024-11-15"
+link: "https://www.scoutforschools.com/"
 ---
 
 # Scout Landing Page
