--- a/content/projects/snowball.mdx
+++ b/content/projects/snowball.mdx
@@ -2,10 +2,11 @@
 title: "Snowball"
 description: "Crowdfunding Android app created to maximize the impact of individual donations by taking advantage of corporate matching programs."
 image: "/img/snowballpic1.png"
-tags: ["Android", "Mobile App", "Crowdfunding", "Corporate Matching", "Social Impact", "Kotlin", "Firebase"]
+tags: ["Android", "Java", "Mobile App", "Social Impact", "Corporate Matching"]
 categories: ["dev", "design"]
 date: "2020-10-15"
 award: "Best Overall Hack @ Creatica"
+link: "https://devpost.com/software/dodoplier"
 ---
 
 # Snowball
