--- a/content/projects/tetris.mdx
+++ b/content/projects/tetris.mdx
@@ -4,7 +4,8 @@ description: "Tetris remade."
 image: "/img/tetrispic2.png"
 tags: ["JavaScript", "Game Development", "Classic Games", "Tetris", "Web Games", "HTML", "CSS"]
 categories: ["dev", "design"]
-date: "2020-03-20"
+date: "2020-09-15"
+link: "https://lilianzlettuce.github.io/tetris"
 ---
 
 # Tetris
