--- a/content/projects/wooden-toy.mdx
+++ b/content/projects/wooden-toy.mdx
@@ -2,9 +2,10 @@
 title: "Wooden Toy"
 description: "Pacman themed wooden toy with laser-cut interactive parts. Designed and modeled with Autodesk Inventor."
 image: "/img/wooden-toy.png"
-tags: ["Fabrication", "Laser Cutting", "Autodesk Inventor", "CAD Design", "Woodworking", "Pacman", "Physical Design"]
-categories: ["design", "art"]
-date: "2020-04-15"
+tags: ["Autodesk Inventor", "Laser Cutting", "Woodworking", "Pacman", "Interactive Design", "Physical Prototyping"]
+categories: ["fabrication", "design"]
+date: "2020-03-15"
+link: ""
 ---
 
 # Wooden Toy
