--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -7,6 +7,7 @@ categories: ["dev", "art"]
 date: "2025-05-01"
 featured: true
 award: "Upcoming Presentation @ The International Conference on New Interfaces for Musical Expression (NIME)"
+link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
 # Becoming
@@ -37,3 +38,17 @@ This project has been selected for presentation at The International Conference 
 - Enhanced environmental sensing capabilities
 - Multi-user interaction support
 - Integration with machine learning for adaptive responses 
+
+
+---
+
+> test
+
+<TechStack 
+  technologies={["Next.js", "TypeScript", "Tailwind CSS", "Prisma", "PostgreSQL", "Stripe", "NextAuth.js"]}
+  title="Technology Stack"
+/>
+
+<h1>another test </h1>
+
+<IconButton text="Back to Work" icon="→" />
