--- a/content/projects/cero.mdx
+++ b/content/projects/cero.mdx
@@ -6,6 +6,7 @@ tags: ["JavaScript", "Game Development", "melonJS", "Platformer", "Adventure Gam
 categories: ["dev", "art"]
 date: "2021-06-15"
 award: "1st Place @ Hydrangea Hacks"
+link: "https://lilianzlettuce.github.io/cero"
 featured: true
 ---
 
