--- a/content/projects/space-guy.mdx
+++ b/content/projects/space-guy.mdx
@@ -2,9 +2,10 @@
 title: "Space Guy"
 description: "2D space-themed platformer created with a team of 5 using Unity."
 image: "/img/spaceguypic2.png"
-tags: ["Unity", "Game Development", "2D Platformer", "Team Project", "C#", "Space Theme", "Collaboration"]
+tags: ["Unity", "Game Development", "2D Platformer", "C#"]
 categories: ["dev", "art"]
-date: "2020-05-20"
+date: "2020-08-15"
+link: ""
 ---
 
 # Space Guy
