--- a/content/projects/veracity.mdx
+++ b/content/projects/veracity.mdx
@@ -2,9 +2,10 @@
 title: "Veracity"
 description: "Interface for charity searching web app. No longer running due to API restrictions."
 image: "/img/veracitypic3.png"
-tags: ["Web App", "Charity Search", "API Integration", "Social Impact", "JavaScript", "HTML", "CSS"]
-categories: ["dev"]
-date: "2020-02-15"
+tags: ["React", "Charity", "Web App", "API Integration", "Search Interface", "Social Impact"]
+categories: ["dev", "design"]
+date: "2020-11-15"
+link: "https://lilianzlettuce.github.io/veracity"
 ---
 
 # Veracity
