more styling for individual project page

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -10,8 +10,6 @@ award: "Upcoming Presentation @ The International Conference on New Interfaces f
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
-# Becoming
-
 An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
 
 ## Overview
@@ -41,6 +39,8 @@ This project has been selected for presentation at The International Conference 
 
 
 ---
+
+![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
 
 > test
 
