worked on individual project page, added projectinfo mdx component

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -6,9 +6,16 @@ tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardw
 categories: ["dev", "art"]
 date: "2025-05-01"
 featured: true
-award: "Upcoming Presentation @ The International Conference on New Interfaces for Musical Expression (NIME)"
+award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
+
+<ProjectInfo 
+    roles={["Artist", "Developer"]} 
+    timeline="August 2024 - May 2025"
+    team={["Solo project"]}
+    type="Audiovisual Installation"
+/>
 
 An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
 
@@ -22,6 +29,8 @@ Becoming is a custom playable device that responds to both interaction through a
 - **Environmental Sensing**: Real-time detection of surrounding stimuli
 - **Audio-Visual Response**: Dynamic feedback based on interaction and environment
 - **Interactive Art**: Blends technology with artistic expression
+
+1. hello
 
 ## Technical Implementation
 
@@ -41,6 +50,8 @@ This project has been selected for presentation at The International Conference 
 ---
 
 ![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
+![Becoming photo 3](/img/becoming3.png "Becoming photo 3")
+![Becoming photo 4](/img/becoming4.png "Becoming photo 4")
 
 > test
 
@@ -50,5 +61,3 @@ This project has been selected for presentation at The International Conference 
 />
 
 <h1>another test </h1>
-
-<IconButton text="Back to Work" icon="→" />
