edited first 3 markdown project pages, more styling

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -46,11 +46,19 @@ This project has been selected for presentation at The International Conference 
 - Multi-user interaction support
 - Integration with machine learning for adaptive responses 
 
+---
+
+| Syntax | Description |
+| ----------- | ----------- |
+| Header | Title |
+| Paragraph | Text |
 
 ---
 
 ![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
+
 ![Becoming photo 3](/img/becoming3.png "Becoming photo 3")
+
 ![Becoming photo 4](/img/becoming4.png "Becoming photo 4")
 
 > test
@@ -61,3 +69,11 @@ This project has been selected for presentation at The International Conference 
 />
 
 <h1>another test </h1>
+
+**bold text**
+
+*italicized test*
+
+`code line`
+
+[NIME 2025](https://nime2025.org/proceedings/183.html)
