--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Purdue Hackers Landing Page"
+title: "Purdue Hackers"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
 image: "/img/phpic2.png"
 tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
@@ -8,16 +8,15 @@ date: "2024-10-01"
 link: "https://www.purduehackers.com/"
 ---
 
-# Purdue Hackers Landing Page
-
 A central hub for Purdue Hackers, a thriving student organization with over 1000 members dedicated to building and shipping creative projects.
 
 ## Overview
 
-This project serves as the primary digital presence for Purdue Hackers, showcasing the organization's mission, events, and community achievements. The site is designed to engage current members and attract new participants to the hacking community.
+This project serves as the primary digital presence for Purdue Hackers, showcasing the organization's mission, events, and community. The site is designed to engage current members and attract new participants to the hacking community.
 
 ## Key Features
 
+- **Brand Identity**: 
 - **Community Showcase**: Highlights member projects and achievements
 - **Event Information**: Centralized location for hackathon and workshop details
 - **Member Resources**: Access to tools, tutorials, and community guidelines
@@ -28,13 +27,30 @@ This project serves as the primary digital presence for Purdue Hackers, showcasi
 
 Built with modern web technologies to ensure reliability and maintainability for a student-run organization.
 
+Stack: React, Next.js, Typescript, Tailwind CSS
+
+## Process
+
+- Whiteboard/paper prototyping
+- Lofi/Hifi prototypes with Figma
+- Technical implementation and iterations
+
+## Pages
+
+We went for a Neobrutalist Retro UI aesthetic 
+(High contrast, draggable windows, fun/unique graphics and interactions)
+
+- Hero 
+- Welcome email message, 
+-- Interactive email component (secret messages)
+- Hack Night 
+-- Previous events, secret windows, (broken) hack night countdown
+-- Moon spray effect 
+- CTA
+-- Sad plant, shitty drawings I drew in Figma that were supposed to be just placeholders
+
 ## Impact
 
 The landing page serves as a crucial touchpoint for the Purdue Hackers community, helping to grow membership and showcase the organization's impact on campus.
 
-## Future Enhancements
-
-- Member portal integration
-- Event registration system
-- Project showcase gallery
-- Real-time updates and notifications 
+## 
