--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Scout Landing Page"
+title: "Scout"
 description: "Landing page for Scout, a YC-backed startup. Implemented site from scratch based off of existing UI prototypes using modern NextJS/Typescript stack, created responsive UX and animations building on design language and assets."
 image: "/img/scout1.png"
 tags: ["Next.js", "TypeScript", "React", "Responsive Design", "UI/UX", "Landing Page", "Startup"]
