made some more mdx components, wrote stuff for ph page

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -8,26 +8,55 @@ date: "2024-10-01"
 link: "https://www.purduehackers.com/"
 ---
 
-A central hub for Purdue Hackers, a thriving student organization with over 1000 members dedicated to building and shipping creative projects.
+<ProjectInfo 
+    roles={["Fullstack Developer", "Creative Lead"]} 
+    timeline="August 2022 - December 2022"
+    team={["3 developers/designers"]}
+    type="Landing Page"
+/>
 
 ## Overview
 
 This project serves as the primary digital presence for Purdue Hackers, showcasing the organization's mission, events, and community. The site is designed to engage current members and attract new participants to the hacking community.
 
+## Background (Context & Problem)
+When I first joined the Purdue Hackers organizing team in my freshman year, the club's website was in dire need of an upgrade.
+As part of the engineering team, I was tasked with building a dynamic experience that reflected our club's core vision and values. 
+
+- Current site is out of date, need an updated site to reflect new branding and represent our online presence
+- Need a dedicated website to communicate what the club does and how interested individuals can get involved
+
+## Goals
+- Create an engaging and informative landing page to introduce Purdue Hackers to the public
+- Highlight the club's mission, past projects, and upcoming events
+- Provide a clear and user-friendly process for joining the club
+- Ensure the site is mobile-friendly and accessible to all users
+
+## Constraints
+- The website must align with the club’s branding and visual identity
+-- (coherent branding and visual identity was kind of non-existent at this point, we were making it up as we go along)
+- Should be deployable using free or low-cost hosting services
+- Should be easy to maintain and update with new content
+- Ship by the end of school year (2 semesters time)
+
 ## Key Features
 
-- **Brand Identity**: 
+- **Brand Identity**: Unique visual design capturing our identity as an organization
 - **Community Showcase**: Highlights member projects and achievements
 - **Event Information**: Centralized location for hackathon and workshop details
 - **Member Resources**: Access to tools, tutorials, and community guidelines
 - **Responsive Design**: Optimized for students accessing from various devices
-- **Performance Focused**: Fast loading for mobile-first student audience
+
+
 
 ## Technical Implementation
 
 Built with modern web technologies to ensure reliability and maintainability for a student-run organization.
 
-Stack: React, Next.js, Typescript, Tailwind CSS
+<TechStack 
+  technologies={["Next.js", "TypeScript", "Tailwind CSS", "Sanity", "Prisma", "PostgreSQL", "NextAuth.js"]}
+  title="Technology Stack"
+/>
 
 ## Process
 
@@ -49,8 +78,13 @@ We went for a Neobrutalist Retro UI aesthetic
 - CTA
 -- Sad plant, shitty drawings I drew in Figma that were supposed to be just placeholders
 
+## What I learned???
+- 
+
 ## Impact
 
 The landing page serves as a crucial touchpoint for the Purdue Hackers community, helping to grow membership and showcase the organization's impact on campus.
 
-## 
+## Next steps
+- Club is constantly growing and evolving, website should change in stride to reflect club's identity
+- 
