added split secion mdx component

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Purdue Hackers"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
-image: "/img/phpic2.png"
+image: "/projects/purdue-hackers/2.webp"
 tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
 categories: ["dev", "design"]
 date: "2024-10-01"
@@ -25,6 +25,29 @@ As part of the engineering team, I was tasked with building a dynamic experience
 
 - Current site is out of date, need an updated site to reflect new branding and represent our online presence
 - Need a dedicated website to communicate what the club does and how interested individuals can get involved
+
+<SplitSection>
+  <SplitLeft>
+    # Goals
+  </SplitLeft>
+  <SplitRight>
+    - Create an engaging and informative landing page to introduce Purdue Hackers to the public
+    - Highlight the club's mission, past projects, and upcoming events
+    - Provide a clear and user-friendly process for joining the club
+  </SplitRight>
+</SplitSection>
+
+<SplitSection>
+  <SplitLeft>
+    ## Goals
+    - Create an engaging and informative landing page to introduce Purdue Hackers to the public
+    - Highlight the club's mission, past projects, and upcoming events
+    - Provide a clear and user-friendly process for joining the club
+  </SplitLeft>
+  <SplitRight>
+    ![Hero screenshot](/projects/purdue-hackers/1.webp)
+  </SplitRight>
+</SplitSection>
 
 ## Goals
 - Create an engaging and informative landing page to introduce Purdue Hackers to the public
