started incorporating mock up photos for websites

--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Scout"
 description: "Landing page for Scout, a YC-backed startup. Implemented site from scratch based off of existing UI prototypes using modern NextJS/Typescript stack, created responsive UX and animations building on design language and assets."
-image: "/img/scout1.png"
+image: "/projects/scout/hero_desktop_shots.webp"
 tags: ["Next.js", "TypeScript", "React", "Responsive Design", "UI/UX", "Landing Page", "Startup"]
 categories: ["dev", "design"]
 date: "2024-11-15"
@@ -16,6 +16,8 @@ A modern, responsive landing page for Scout, a YC-backed startup, built with cut
 
 This project involved creating a complete landing page from scratch based on existing UI prototypes. The implementation focused on delivering a seamless user experience with modern animations and responsive design.
 
+![Hero screenshot](/projects/scout/hero_liquid_glass.png)
+
 ## Key Features
 
 - **Modern Tech Stack**: Next.js with TypeScript for robust development
@@ -23,6 +25,8 @@ This project involved creating a complete landing page from scratch based on exi
 - **Smooth Animations**: Enhanced user experience with thoughtful motion design
 - **Performance Optimized**: Fast loading times and smooth interactions
 - **Design System**: Consistent visual language throughout
+
+![Hero screenshot](/projects/scout/hero.png)
 
 ## Technical Implementation
 
