--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Purdue Hackers"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
-image: "/projects/purdue-hackers/2.webp"
+image: "/projects/purdue-hackers/invitation_desktop.png"
 tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
 categories: ["dev", "design"]
 date: "2024-10-01"
@@ -37,6 +37,8 @@ As part of the engineering team, I was tasked with building a dynamic experience
   </SplitRight>
 </SplitSection>
 
+![Hero screenshot](/projects/purdue-hackers/hero.webp)
+
 <SplitSection>
   <SplitLeft>
     ## Goals
@@ -70,6 +72,7 @@ As part of the engineering team, I was tasked with building a dynamic experience
 - **Member Resources**: Access to tools, tutorials, and community guidelines
 - **Responsive Design**: Optimized for students accessing from various devices
 
+![Invitation mockup](/projects/purdue-hackers/invitation_desktop.png)
 
 
 ## Technical Implementation
@@ -86,6 +89,8 @@ Built with modern web technologies to ensure reliability and maintainability for
 - Whiteboard/paper prototyping
 - Lofi/Hifi prototypes with Figma
 - Technical implementation and iterations
+
+![Invitation](/projects/purdue-hackers/invitation.png)
 
 ## Pages
 
