--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -8,23 +8,36 @@ date: "2024-10-01"
 link: "https://www.purduehackers.com/"
 ---
 
-<ProjectInfo 
-    roles={["Fullstack Developer", "Creative Lead"]} 
-    timeline="August 2022 - December 2022"
-    team={["3 developers/designers"]}
-    type="Landing Page"
+<SplitSection>
+  <SplitLeft>
+    # Brief
+    <ProjectInfo 
+  roles={["Fullstack Developer", "Creative Lead"]} 
+  timeline="August 2022 - December 2022"
+  team={["3 developers/designers"]}
+  type="Landing Page"
 />
+  </SplitLeft>
+  <SplitRight>
+    ## Overview
 
-## Overview
+    This project serves as the primary digital presence for Purdue Hackers, showcasing the organization's mission, events, and community. The site is designed to engage current members and attract new participants to the hacking community.
 
-This project serves as the primary digital presence for Purdue Hackers, showcasing the organization's mission, events, and community. The site is designed to engage current members and attract new participants to the hacking community.
+    ## Background (Context & Problem)
+    When I first joined the Purdue Hackers organizing team in my freshman year, the club's website was in dire need of an upgrade.
+    As part of the engineering team, I was tasked with building a dynamic experience that reflected our club's core vision and values. 
 
-## Background (Context & Problem)
-When I first joined the Purdue Hackers organizing team in my freshman year, the club's website was in dire need of an upgrade.
-As part of the engineering team, I was tasked with building a dynamic experience that reflected our club's core vision and values. 
+    - Current site is out of date, need an updated site to reflect new branding and represent our online presence
+    - Need a dedicated website to communicate what the club does and how interested individuals can get involved
+  </SplitRight>
+</SplitSection>
 
-- Current site is out of date, need an updated site to reflect new branding and represent our online presence
-- Need a dedicated website to communicate what the club does and how interested individuals can get involved
+<ProjectInfo 
+  roles={["Fullstack Developer", "Creative Lead"]} 
+  timeline="August 2022 - December 2022"
+  team={["3 developers/designers"]}
+  type="Landing Page"
+/>
 
 <SplitSection>
   <SplitLeft>
@@ -41,78 +54,82 @@ As part of the engineering team, I was tasked with building a dynamic experience
 
 <SplitSection>
   <SplitLeft>
-    ## Goals
+    # Goals
     - Create an engaging and informative landing page to introduce Purdue Hackers to the public
     - Highlight the club's mission, past projects, and upcoming events
     - Provide a clear and user-friendly process for joining the club
   </SplitLeft>
   <SplitRight>
-    ![Hero screenshot](/projects/purdue-hackers/1.webp)
+    ![Hero screenshot](/projects/purdue-hackers/hero.webp)
   </SplitRight>
 </SplitSection>
 
-## Goals
-- Create an engaging and informative landing page to introduce Purdue Hackers to the public
-- Highlight the club's mission, past projects, and upcoming events
-- Provide a clear and user-friendly process for joining the club
-- Ensure the site is mobile-friendly and accessible to all users
+<MiddleSection>
+  ## Goals
+  - Create an engaging and informative landing page to introduce Purdue Hackers to the public
+  - Highlight the club's mission, past projects, and upcoming events
+  - Provide a clear and user-friendly process for joining the club
+  - Ensure the site is mobile-friendly and accessible to all users
 
-## Constraints
-- The website must align with the club’s branding and visual identity
--- (coherent branding and visual identity was kind of non-existent at this point, we were making it up as we go along)
-- Should be deployable using free or low-cost hosting services
-- Should be easy to maintain and update with new content
-- Ship by the end of school year (2 semesters time)
+  ## Constraints
+  - The website must align with the club’s branding and visual identity
+  -- (coherent branding and visual identity was kind of non-existent at this point, we were making it up as we go along)
+  - Should be deployable using free or low-cost hosting services
+  - Should be easy to maintain and update with new content
+  - Ship by the end of school year (2 semesters time)
 
-## Key Features
+  ## Key Features
 
-- **Brand Identity**: Unique visual design capturing our identity as an organization
-- **Community Showcase**: Highlights member projects and achievements
-- **Event Information**: Centralized location for hackathon and workshop details
-- **Member Resources**: Access to tools, tutorials, and community guidelines
-- **Responsive Design**: Optimized for students accessing from various devices
+  - **Brand Identity**: Unique visual design capturing our identity as an organization
+  - **Community Showcase**: Highlights member projects and achievements
+  - **Event Information**: Centralized location for hackathon and workshop details
+  - **Member Resources**: Access to tools, tutorials, and community guidelines
+  - **Responsive Design**: Optimized for students accessing from various devices
+</MiddleSection>
 
 ![Invitation mockup](/projects/purdue-hackers/invitation_desktop.png)
 
 
-## Technical Implementation
+<MiddleSection>
+  ## Technical Implementation
 
-Built with modern web technologies to ensure reliability and maintainability for a student-run organization.
+  Built with modern web technologies to ensure reliability and maintainability for a student-run organization.
 
-<TechStack 
-  technologies={["Next.js", "TypeScript", "Tailwind CSS", "Sanity", "Prisma", "PostgreSQL", "NextAuth.js"]}
-  title="Technology Stack"
-/>
+  <TechStack 
+    technologies={["Next.js", "TypeScript", "Tailwind CSS", "Sanity", "Prisma", "PostgreSQL", "NextAuth.js"]}
+    title="Technology Stack"
+  />
 
-## Process
+  ## Process
 
-- Whiteboard/paper prototyping
-- Lofi/Hifi prototypes with Figma
-- Technical implementation and iterations
+  - Whiteboard/paper prototyping
+  - Lofi/Hifi prototypes with Figma
+  - Technical implementation and iterations
 
-![Invitation](/projects/purdue-hackers/invitation.png)
+  ![Invitation](/projects/purdue-hackers/invitation.png)
 
-## Pages
+  ## Pages
 
-We went for a Neobrutalist Retro UI aesthetic 
-(High contrast, draggable windows, fun/unique graphics and interactions)
+  We went for a Neobrutalist Retro UI aesthetic 
+  (High contrast, draggable windows, fun/unique graphics and interactions)
 
-- Hero 
-- Welcome email message, 
--- Interactive email component (secret messages)
-- Hack Night 
--- Previous events, secret windows, (broken) hack night countdown
--- Moon spray effect 
-- CTA
--- Sad plant, shitty drawings I drew in Figma that were supposed to be just placeholders
+  - Hero 
+  - Welcome email message, 
+  -- Interactive email component (secret messages)
+  - Hack Night 
+  -- Previous events, secret windows, (broken) hack night countdown
+  -- Moon spray effect 
+  - CTA
+  -- Sad plant, shitty drawings I drew in Figma that were supposed to be just placeholders
 
-## What I learned???
-- 
+  ## What I learned???
+  - 
 
-## Impact
+  ## Impact
 
-The landing page serves as a crucial touchpoint for the Purdue Hackers community, helping to grow membership and showcase the organization's impact on campus.
+  The landing page serves as a crucial touchpoint for the Purdue Hackers community, helping to grow membership and showcase the organization's impact on campus.
 
-## Next steps
-- Club is constantly growing and evolving, website should change in stride to reflect club's identity
-- 
+  ## Next steps
+  - Club is constantly growing and evolving, website should change in stride to reflect club's identity
+  - 
+</MiddleSection>
