added mdx nextjs image wrapper for markdown images

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -64,15 +64,27 @@ link: "https://www.purduehackers.com/"
 
 <SplitSection>
   <SectionColumn size={1}>
-    ![Hero screenshot](/projects/purdue-hackers/hero_mac-air.webp)
+    <MDXImageFillAspectRatio 
+      src="/projects/purdue-hackers/hero_mac-air.webp" 
+      alt="Hero screenshot" 
+      preset="project-documentation"
+    />
   </SectionColumn>
   <SectionColumn size={1}>
-    ![Hero screenshot](/projects/purdue-hackers/invitation.webp)
+    <MDXImageFillAspectRatio 
+      src="/projects/purdue-hackers/invitation.webp" 
+      alt="Hero screenshot" 
+      preset="project-documentation"
+    />
   </SectionColumn>
 </SplitSection>
 
 
-![Hero screenshot](/projects/purdue-hackers/hack-night_mac-air.webp)
+<MDXImageFillAspectRatio 
+  src="/projects/purdue-hackers/hack-night_mac-air.webp" 
+  alt="Hero screenshot" 
+  preset="hero"
+/>
 
 <SplitSection>
   <SectionColumn size={1}>
@@ -82,7 +94,11 @@ link: "https://www.purduehackers.com/"
     - Provide a clear and user-friendly process for joining the club
   </SectionColumn>
   <SectionColumn size={1}>
-    ![Hero screenshot](/projects/purdue-hackers/hero.webp)
+    <MDXImageFillAspectRatio 
+      src="/projects/purdue-hackers/hero.webp" 
+      alt="Hero screenshot" 
+      preset="project-documentation"
+    />
   </SectionColumn>
 </SplitSection>
 
@@ -109,7 +125,11 @@ link: "https://www.purduehackers.com/"
   - **Responsive Design**: Optimized for students accessing from various devices
 </MiddleSection>
 
-![Invitation mockup](/projects/purdue-hackers/invitation_desktop.png)
+<MDXImageFillAspectRatio 
+  src="/projects/purdue-hackers/invitation_desktop.png" 
+  alt="Invitation mockup" 
+  preset="project-documentation"
+/>
 
 
 <MiddleSection>
@@ -128,7 +148,11 @@ link: "https://www.purduehackers.com/"
   - Lofi/Hifi prototypes with Figma
   - Technical implementation and iterations
 
-  ![Invitation](/projects/purdue-hackers/invitation.png)
+  <MDXImageFillAspectRatio 
+    src="/projects/purdue-hackers/invitation.webp" 
+    alt="Invitation" 
+    preset="project-documentation"
+  />
 
   ## Pages
 
