started glitch text effect

--- a/content/projects/purdue-hackers-passports.mdx
+++ b/content/projects/purdue-hackers-passports.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Purdue Hackers - Landing Page"
+title: "Purdue Hackers - Passports"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
 image: "/projects/purdue-hackers/invitation_desktop.png"
-tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
+tags: ["Product Design", "Fabrication", "Physical Prototyping", "Student Organization", "Vinyl Heat Press", "Cricut", "Riso Printing"]
 categories: ["dev", "design"]
 date: "2022-12-01"
 link: "https://www.purduehackers.com/"
