updated project layout and related mdx componenets

--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -13,18 +13,23 @@ link: "https://www.scoutforschools.com/"
     description="Landing page for Scout, a YC-backed startup. Implemented site from scratch based off of existing UI prototypes using modern NextJS/Typescript stack, created responsive UX and animations building on design language and assets."
 
 >
-    <ProjectInfo 
-      roles={["Frontend Developer"]} 
-      timeline="3 months"
-      team={["1 developer, 1 designer"]}
-      stack={["Next.js", "React", "Typescript", "TailwindCSS"]}
+    <ProjectInfo
+      items={[
+        { label: "Role", values: ["Frontend Developer"] },
+        { label: "Team", values: ["1 developer, 1 designer"] },
+        { label: "Duration", values: ["3 months"] },
+        { label: "Stack", values: ["Next.js", "React", "Typescript", "TailwindCSS"] },
+      ]}
     />
 </ProjectHeader>
 
-<ProjectInfo 
-      roles={["Fullstack Developer", "Creative Lead"]} 
-      timeline="August 2022 - December 2022"
-      team={["3 developers/designers"]}
+<ProjectInfo
+      items={[
+        { label: "Role", values: ["Frontend Developer"] },
+        { label: "Team", values: ["1 developer, 1 designer"] },
+        { label: "Duration", values: ["3 months"] },
+        { label: "Stack", values: ["Next.js", "React", "Typescript", "TailwindCSS"] },
+      ]}
     />
 
 A modern, responsive landing page for Scout, a YC-backed startup, built with cutting-edge web technologies and focused on exceptional user experience.
