edited basic mdx layout and scout page

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -23,16 +23,41 @@ link: "https://www.purduehackers.com/"
 </SplitSection>
 
 <SplitSection>
-  <SectionColumn size={1}>
-    # Brief
+  <SectionColumn size={2}>
+    ### Brief
   </SectionColumn>
-  <SectionColumn size={1}>
-    ## Background (Context & Problem)
+  <SectionColumn size={3}>
+    #### Background (Context & Problem)
     When I first joined the Purdue Hackers organizing team in my freshman year, the club's website was in dire need of an upgrade.
     As part of the engineering team, I was tasked with building a dynamic experience that reflected our club's core vision and values. 
 
     - Current site is out of date, need an updated site to reflect new branding and represent our online presence
     - Need a dedicated website to communicate what the club does and how interested individuals can get involved
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection>
+  <SectionColumn size={2}>
+    ### Problem
+  </SectionColumn>
+  <SectionColumn size={3}>
+    The current landing page featured the most up-to-date content about the company, but was built using stock graphics on a site-builder. 
+    Conversely, the new UI prototypes provided by the designer did not entirely cover the most updated content.
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection>
+  <SectionColumn size={2}>
+    ### Goals
+  </SectionColumn>
+  <SectionColumn size={3}>
+    → Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does
+    
+    → Incorporate existing designs, taking creative liberties to implement new content in the same design language
+    
+    → Create new components, interactions, and assets that fit existing design language
+    
+    → Maintain visual cohesion  
   </SectionColumn>
 </SplitSection>
 
