--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -9,152 +9,89 @@ link: "https://www.scoutforschools.com/"
 ---
 
 <ProjectHeader
-    title="Scout"
-    description="Landing page for Scout, a YC-backed startup. Implemented site from scratch based off of existing UI prototypes using modern NextJS/Typescript stack, created responsive UX and animations building on design language and assets."
-
+  title="Scout"
+  description="A dynamic, responsive landing page for Scout, a YC-backed startup, focused on exceptional user experience. Implemented site from scratch based off of existing UI prototypes using modern web stack, created responsive UX and animations building on design language and assets."
 >
-    <ProjectInfo
-      items={[
-        { label: "Role", values: ["Frontend Developer"] },
-        { label: "Team", values: ["1 developer, 1 designer"] },
-        { label: "Duration", values: ["3 months"] },
-        { label: "Stack", values: ["Next.js", "React", "Typescript", "TailwindCSS"] },
-      ]}
-    />
+  <ProjectInfo
+    items={[
+      { label: "Role", values: ["Frontend Developer"] },
+      { label: "Duration", values: ["3 months"] },
+      { label: "Team", values: ["1 developer", "1 designer"] },
+      { label: "Stack", values: ["Next.js", "React", "Typescript", "TailwindCSS"] },
+    ]}
+  />
 </ProjectHeader>
 
-<ProjectInfo
-      items={[
-        { label: "Role", values: ["Frontend Developer"] },
-        { label: "Team", values: ["1 developer, 1 designer"] },
-        { label: "Duration", values: ["3 months"] },
-        { label: "Stack", values: ["Next.js", "React", "Typescript", "TailwindCSS"] },
-      ]}
-    />
-
-A modern, responsive landing page for Scout, a YC-backed startup, built with cutting-edge web technologies and focused on exceptional user experience.
-
-## Overview
-
-I delivered a __ website launching Scout, an AI startup.
-
-The project involved buidling a landing page from scratch based on existing UI prototypes. The implementation focused on delivering a seamless user experience with modern animations and responsive design.
-
 <SplitSection>
-  <SectionColumn size={2}>
-    ### Background
+  <SectionColumn size={4}>
+    ###### Background
   </SectionColumn>
-  <SectionColumn size={3}>
+  <SectionColumn size={12}>
     #### Scout is a YC-backed startup building an AI-powered student information system to automate administrative tasks for schools.
 
-    Scout is an AI-powered student information system that helps schools run more efficiently, so teachers can spend less time on administrative tasks and more time connecting with their students.
-    
-    The company had recently pivoted, and decided they wanted a custom-coded landing page.
+    <div className="text-lg">
+      The company had recently pivoted, and decided they wanted a custom-coded landing page to replace their Wordpress site.
 
-    I was given:
-    - Existing UI prototypes from a designer
-    - Existing site created using Wordpress 
-  </SectionColumn>
-</SplitSection>
+      Given existing UI prototypes from a designer, I was tasked with building a landing page from scratch. 
+      The implementation focused on delivering a seamless user experience with modern animations and responsive design.
+    </div>
 
-<SplitSection>
-  <SectionColumn size={2}>
-    ### Problem
-  </SectionColumn>
-  <SectionColumn size={3}>
-    The current landing page featured the most up-to-date content about the company, but was built using stock graphics on a site-builder. 
+    <br/><br/><br/>
+
+    #### The Challenge
+    The previous landing page featured the most up-to-date content about the company, but was built using stock graphics on a site-builder. 
     Conversely, the new UI prototypes provided by the designer did not entirely cover the most updated content.
-  </SectionColumn>
-</SplitSection>
 
-<SplitSection>
-  <SectionColumn size={2}>
-    ## Goals
-  </SectionColumn>
-  <SectionColumn size={3}>
-    → Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does→ Incorporate existing designs, taking creative liberties to implement new content in the same design language
-    
-    → Create new components, interactions, and assets that fit existing design language
-    
-    → Maintain visual cohesion  
-  </SectionColumn>
-</SplitSection>
-
-## Context
-#### Background
-    #### Scout is a YC-backed startup building an AI-powered student information system to automate administrative tasks for schools.
-
-    Scout is an AI-powered student information system that helps schools run more efficiently, so teachers can spend less time on administrative tasks and more time connecting with their students.
-    
-    The company had recently pivoted, and decided they wanted a custom-coded landing page.
-
-    I was given:
-    - Existing UI prototypes from a designer
-    - Existing site created using Wordpress 
-
-    #### Problem
-    The current landing page featured the most up-to-date content about the company, but was built using stock graphics on a site-builder. 
-    Conversely, the new UI prototypes provided by the designer did not entirely cover the most updated content.
+    <br/><br/><br/>
 
     #### Goals
-    → Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does→ Incorporate existing designs, taking creative liberties to implement new content in the same design language
-    → Create new components, interactions, and assets that fit existing design language
-    → Maintain visual cohesion 
+    → Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does
+    
+    → Incorporate existing designs, taking creative liberties to implement new content in the same design language
+    
+    → Create new components, interactions, and assets to create a seamless user experience while maintaining visual cohesion  
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-## Implementation 
-### Custom-coded Site
+<SplitSection>
+  <SectionColumn size={3}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={10}>
+    #### Custom-coded Site
 
-We decided on a modern Next.js/React/Typescript stack for its scalability and performance. 
-The site takes advantage of reusable components, server-side rendering, and --static-site generation--.
+    We decided on a modern Next.js/React/Typescript stack for its scalability and performance. 
+    The site takes advantage of reusable components, server-side rendering, and static-site generation.
 
+    Interactions and animations to improve the user experience 
+    Challenges:
+    Figuring out how to properly use SSR, putting side-effects directly in the render, not being able to use state or hooks
+    Managing state for animations on the client side
 
-Interactions and animations to improve the user experience 
-Challenges:
-Figuring out how to properly use SSR, putting side-effects directly in the render, not being able to use state or hooks
-Managing state for animations on the client side
+    <br/><br/><br/>
 
+    #### Elevating UX and Interactions
 
-### Expanding on design language... UX? Interactions
-### Elevating UX
+    Interactive components to showcase Scout’s features
 
-Interactive components to showcase Scout’s features
+    Themed micro-animations for buttons, page sections, etc.
 
-Themed micro-animations for buttons, page sections, etc.
+    <br/><br/><br/>
 
-### Blog Integration
-Integrated Sanity CMS so the team can easily publish blog posts without touching the source code.
-
-
-Wrote queries for fetching post metadata and content, 
-Defined “schemas/types” for post data structures
-
-Challenges with strict typing in Typescript, had to find workaround
-
-### Accessible and Mobile-Friendly
-Ensured delightful UI/UX across all devices with responsive resizing and cross-platform compatibility.
+    #### Blog Integration
+    Integrated Sanity CMS so the team can easily publish blog posts without touching the source code.
 
 
-## Key Features
+    Wrote queries for fetching post metadata and content, 
+    Defined “schemas/types” for post data structures
 
-- **Modern Tech Stack**: Next.js with TypeScript for robust development
-- **Responsive Design**: Optimized for all device sizes
-- **Smooth Animations**: Enhanced user experience with thoughtful motion design
-- **Performance Optimized**: Fast loading times and smooth interactions
-- **Design System**: Consistent visual language throughout
+    Challenges with strict typing in Typescript, had to find workaround
 
-![Hero screenshot](/projects/scout/hero.png)
-
-## Technical Implementation
-
-Built with Next.js and TypeScript, the landing page leverages modern web development practices to create a fast, accessible, and engaging user experience.
-
-## Impact
-
-The landing page successfully represents Scout's brand and mission, providing an effective platform for user acquisition and engagement.
-
-## Future Enhancements
-
-- A/B testing capabilities
-- Advanced analytics integration
-- Performance optimizations
-- Enhanced accessibility features 
+    <br/><br/><br/>
+    
+    #### Accessible and Mobile-Friendly
+    Ensured delightful UI/UX across all devices with responsive resizing and cross-platform compatibility.
+  </SectionColumn>
+</SplitSection>
