--- a/content/projects/ml-hacks.mdx
+++ b/content/projects/ml-hacks.mdx
@@ -2,7 +2,7 @@
 title: "ML Hacks"
 description: "Website for ML Hacks, Bay Area's premier Machine Learning focused hackathon for female and nonbinary high school students."
 image: "/img/mlhackspic1.png"
-tags: ["Machine Learning", "Hackathon", "Education", "Women in Tech", "Web Development", "Event Website"]
+tags: ["Hackathon", "Web Development", "Machine Learning"]
 categories: ["dev", "design"]
 date: "2022-03-15"
 link: "https://mlhacks2022.vercel.app/"
